# qrtag30

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_docker.sh  load_test.js  load_test.sh  payload.json  push_azure_registry.sh  push_docker.sh  run_docker.sh  test.sh
jmeter/: TestPlan4QRTag29.jmx
src/: apis.rs  emvo_qrcode.rs  emvo_types.rs  main.rs  prompt_pay.rs
static/: index.html
