[package]
name = "prompt_pay_service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"

env_logger = "0.10"
regex = "1.5"
crc = "2.0"
#qrcode = "0.12"
#image = "0.23"
qrcode-generator = "4.1"
base64 = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

actix-web-opentelemetry = { version = "0.13" , features=["metrics"] }
openssl = { version = "0.10", features = ["vendored"] }
opentelemetry = { version = "0.18", features = ["rt-tokio","metrics"]}
opentelemetry-application-insights = {version = "0.23" , default-features = false ,features=["reqwest-client","metrics"]}
reqwest = "0.11"
log = "0.4"
derive_more = "0.99"
rand = "0.8"

